# AdventOfCode2018

./: .gitignore
day1/: day1.cabal
day1/src/: Main.hs
day10/: day10.cabal
day10/src/: Main.hs
day11/: day11.cabal
day11/src/: Main.hs
day2/: day2.cabal
day2/src/: Main.hs
day3/: day3.cabal
day3/src/: Main.hs
day4/: day4.cabal
day4/src/: Main.hs
day5/: day5.cabal
day5/src/: Main.hs
day6/: day6.cabal
day6/src/: Main.hs
day8/: day8.cabal
day8/src/: Main.hs
day9/: day9.cabal
day9/src/: Main.hs
