name:                day3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/day3#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day3
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       matrix >= 0.2,
                       split >= 0.2,
                       containers >= 0.2,
                       unordered-containers >= 0.2
